feat(builder): add remove functionality and cleanup dragging comp

--- a/src/index.scss
+++ b/src/index.scss
@@ -46,8 +46,10 @@ ul {
 }
 
 .default_comp {
+  position: relative;
   border: 1px dotted #63E2FF;
   background: rgba(255, 255, 255, 0.6);
+  display: block;
 }
 
 .default_comp:hover {
@@ -57,4 +59,20 @@ ul {
 
 .draggable_comp_create {
   cursor: move;
+}
+
+.btn_close {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  border-radius: 2px;
+  padding: 0px 4px;
+  background: #D46868;
+  color: #fff;
+  font-size: 8px;
+  
+  &:hover {
+    cursor: pointer;
+    background: #C75656;
+  }
 }
