--- a/src/index.scss
+++ b/src/index.scss
@@ -119,8 +119,20 @@ ul {
 }
 
 .o-prompt {
+  position: relative;
   background: #ddd;
   border: 3px solid rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 20px;
+}
+
+/*  DIALOG STYLING  */
+.dialog-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+ai-dialog-overlay {
+  background: rgba(0, 0, 0, 0.2)
 }
