feat(properties): add background color

--- a/src/index.scss
+++ b/src/index.scss
@@ -235,8 +235,12 @@ ul {
   border: 1px solid rgba(0, 0, 0, 0.03);
   margin-bottom: 10px;
   
-  .box {
+  .border {
     height: 30px;
+  }
+  
+  .background {
+    height: 300px;
   }
 }
 
