--- a/src/index.scss
+++ b/src/index.scss
@@ -151,6 +151,10 @@ ul {
   border-radius: 2px;
 }
 
+.content_sec.active {
+  background: rgba(255, 255, 255, 0.1);
+}
+
 .prop {
   padding: 5px 0px;
   
@@ -273,7 +277,7 @@ ul {
   position: fixed;
   width: 0px;
   height: 0px;
-  display: none;
+  display: none;a
   
   .top-border {
     top: 0px;
